// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatView should not scroll to bottom 1`] = `
<ChatView
  messages={
    Array [
      Object {
        "date": "2017-01-01T00:00:00.000Z",
        "nick": "nick",
        "text": "text",
      },
    ]
  }
  selfNick="nick"
  userClicked={[Function]}
>
  <div>
    <Message
      date={"2017-01-01T00:00:00.000Z"}
      nick="nick"
      text="text"
      userClicked={[Function]}
    >
      <div>
        <span
          style={
            Object {
              "color": "#b2b2b2",
            }
          }
        >
          [
          00
          :
          00
          ] 
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "color": "#ffc561",
              "cursor": "pointer",
              "fontWeight": 800,
            }
          }
        >
          nick
          : 
        </span>
        <span
          style={Object {}}
        >
          text
        </span>
      </div>
    </Message>
  </div>
</ChatView>
`;

exports[`ChatView should render 1`] = `
<ChatView
  messages={Array []}
  selfNick="nick"
  userClicked={[Function]}
>
  <div />
</ChatView>
`;

exports[`ChatView should render message as self 1`] = `
<ChatView
  messages={
    Array [
      Object {
        "date": "2017-01-01T00:00:00.000Z",
        "nick": "nick",
        "text": "text",
        "type": 3,
      },
    ]
  }
  selfNick="nick"
  userClicked={[Function]}
>
  <div>
    <Message
      date={"2017-01-01T00:00:00.000Z"}
      nick="nick"
      text="text"
      type={3}
      userClicked={[Function]}
    >
      <div>
        <span
          style={
            Object {
              "color": "#b2b2b2",
            }
          }
        >
          [
          00
          :
          00
          ] 
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "color": "#CECECE",
              "cursor": "pointer",
              "fontWeight": 800,
            }
          }
        >
          nick
          : 
        </span>
        <span
          style={Object {}}
        >
          text
        </span>
      </div>
    </Message>
  </div>
</ChatView>
`;

exports[`ChatView should render message as system 1`] = `
<ChatView
  messages={
    Array [
      Object {
        "date": "2017-01-01T00:00:00.000Z",
        "nick": "System",
        "text": "text",
        "type": 2,
      },
    ]
  }
  selfNick="nick"
  userClicked={[Function]}
>
  <div>
    <Message
      date={"2017-01-01T00:00:00.000Z"}
      nick="System"
      text="text"
      type={2}
      userClicked={[Function]}
    >
      <div>
        <span
          style={
            Object {
              "color": "#ADADAD",
            }
          }
        >
          text
        </span>
      </div>
    </Message>
  </div>
</ChatView>
`;

exports[`ChatView should render messages 1`] = `
<ChatView
  messages={
    Array [
      Object {
        "date": "2017-01-01T00:00:00.000Z",
        "nick": "name",
        "text": "text",
        "type": 0,
      },
    ]
  }
  selfNick="nick"
  userClicked={[Function]}
>
  <div>
    <Message
      date={"2017-01-01T00:00:00.000Z"}
      nick="name"
      text="text"
      type={0}
      userClicked={[Function]}
    >
      <div>
        <span
          style={
            Object {
              "color": "#b2b2b2",
            }
          }
        >
          [
          00
          :
          00
          ] 
        </span>
        <span
          onClick={[Function]}
          style={
            Object {
              "color": "#ffc561",
              "cursor": "pointer",
              "fontWeight": 800,
            }
          }
        >
          name
          : 
        </span>
        <span
          style={Object {}}
        >
          text
        </span>
      </div>
    </Message>
  </div>
</ChatView>
`;
